wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
.section-hero {
    background-color: $blue;
    position: relative;
    margin-top: 0;
    
    .shape {
        display: none;
        position: absolute;
        z-index: 2;
        line-height: 0;
        left: 0;
        bottom: -1px;
        width: 100%;
        
        svg,
        img {
            display: block;
            line-height: 0;
            width: 100%;
        }
    }
    
    .hero-content {
        padding: rem-calc(30 0);
        text-align: center;        
    }
    
    &.has-background {
        background-color: transparent; 
        
        .inner {
            min-height: 30vw;    
        }
        
        .wrap .row {
            padding-bottom: 8.8888889%;  
            min-height: 40vw;  
            
            @include breakpoint(large) {
                min-height: 30vw;
            }
            
            // See Hack - CSS target only IE11 and IE10 (media query)
            @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
                @include breakpoint(large) {
                    padding: rem-calc(0 0 125);
                }
                
                &:after {
                  content: '';
                  display: block;
                  min-height: inherit;
                  font-size: 0;
                }
            }
            
        }
        
        .hero-content {
            @include breakpoint(large) {
                margin: 0 auto;
                max-width: rem-calc(680);
            }
            
            h1 {
                position: relative;
                
                &:after {
                    @include two-lines-horizontal;
                    display: block;
                    margin: rem-calc(12) auto 0;   
                }
            }   
        }
        
        .shape {
            display: block; 
        }
    }
    
    .wrap {

        .hero-content {
            position: relative;
            z-index: 3;
        }
                        
        h1 {
            color: #fff;
            font-weight: 900;
            margin-bottom: 0;
        }
        
        p {
            color: #fff;   
        }
    }
    
    .document-ready & {
    
        .wrap .row {
                        
            position: relative;
            
            @include breakpoint(large) {   
                &:before {
                    @include three-lines;
                    position: absolute;
                    top: -15px;
                    left: -60px;
                    z-index: 4;  
                }            
               
            }

        }
        
        
        &.has-background .wrap .row {
                        
            position: relative;
            
            @include breakpoint(large) {   
                &:before {
                    left: rem-calc(map-get($grid-column-gutter, large)/2); 
                    z-index: 4;  
                }            
                         
                &:after {
                    @include five-lines;
                    position: absolute;
                    right: 125px;
                    bottom: 10%;
                    z-index: 1;  
                    transition-delay: 1.4s;
                    transition-duration: .4s;
                    transition-property: opacity;
                }
            }
            
            @include breakpoint(xxlarge) {
                &:after {
                    bottom: 14%;
                }
            }
        }
    
    }
        
    .background-image {        
        background-size: cover;
        position: relative;
        
        &:after {
            content: '';
            display: block;
            width: 100%;
            height: 100%;
            position: absolute;
            top: 0;
            left: 0;
            background: linear-gradient(270deg, rgba(#64A70B, .8) 0%, rgba(#046A38, .8) 100%);
        }
    }     
}

